--- a/client/components/multipleTableVisualization/multipleTableVisualization.html
+++ b/client/components/multipleTableVisualization/multipleTableVisualization.html
@@ -86,18 +86,18 @@
                 </div>
             </div>
 
-            <visualization-options class="visualization-options" active="active" bindings="bindings" fields="fields" functions="functions"></visualization-options>
+            <visualization-options class="visualization-options"></visualization-options>
         </options-menu>
     </div>
 
     <div class="clearfix"></div>
 
     <div class="header-container filter-container legend-container">
-        <visualization-headers class="visualization-headers" active="active" functions="functions"></visualization-headers>
+        <visualization-headers class="visualization-headers"></visualization-headers>
     </div>
 
     <div class="clearfix"></div>
 
-    <visualization-display id="{{visualizationId}}" class="visualization-display" active="active" functions="functions" style="height: 0px; width: 0px;"></visualization-display>
+    <visualization-display class="visualization-display" style="height: 0px; width: 0px;"></visualization-display>
 </div>
 
