--- a/client/components/dataTable/dataTableDisplay.html
+++ b/client/components/dataTable/dataTableDisplay.html
@@ -1,1 +1,1 @@
-<div ag-grid="active.gridOptions" class="ag-fresh results-table" ng-class="{true: 'ag-dark', false: 'ag-fresh'}[active.themeType === 'dark']"></div>
+<div ag-grid="active.gridOptions" class="results-table" ng-class="{true: 'ag-dark', false: 'ag-fresh'}[active.themeType === 'dark']"></div>
