--- a/client/components/multipleTableVisualization/layerOptions.html
+++ b/client/components/multipleTableVisualization/layerOptions.html
@@ -1,37 +1,42 @@
-<div class="form-group layer-options-container" ng-drop="true" ng-drop-success="reorderLayer($index, $data)" ng-repeat="layer in layers | reverse">
-    <div class="form-group layer-options-well neon-well">
+<div class="form-group">
+    <button type="button" class="btn btn-primary" title="Create New Layer" ng-click="functions.createLayer()">Create New Layer</button>
+</div>
+
+<!-- The ng-drag and ng-drop directives are from the ngDraggable library. -->
+<div class="form-group layer-options-container" ng-drop="true" ng-drop-success="functions.reorderLayer($data, $index)" ng-repeat="layer in active.layers | reverse">
+    <div class="form-group layer-options-well neon-well" ng-drag="true" ng-drag-data="layer">
         <div class="layer-options-row">
             <div class="btn-group layer-options-col layer-options-col-wide" ng-if="!bindings.hideAdvancedOptions">
                 <label class="btn btn-default" ng-cancel-drag ng-class="{true: 'active', false: ''}[layer.show]" title="{{'Layer Visibility ' + (layer.show ? 'On' : 'Off')}}">
-                    <input type="checkbox" style="display:none" ng-model="layer.show" ng-change="toggleShowLayer(layer)">
+                    <input type="checkbox" style="display:none" ng-model="layer.show" ng-change="functions.toggleShowLayer(layer)">
                     <span class="glyphicon glyphicon-eye-open"></span>
                 </label>
-                <label class="btn btn-default" ng-cancel-drag ng-class="{true: 'active', false: ''}[layer.filter]" title="{{'Layer Filtering ' + (layer.filter ? 'On' : 'Off')}}">
-                    <input type="checkbox" style="display:none" ng-model="layer.filter" ng-change="toggleFilterLayer(layer)">
+                <label class="btn btn-default" ng-cancel-drag ng-class="{true: 'active', false: ''}[layer.filterable]" title="{{'Layer Filtering ' + (layer.filterable ? 'On' : 'Off')}}">
+                    <input type="checkbox" style="display:none" ng-model="layer.filterable" ng-change="functions.toggleFilterLayer(layer)">
                     <span class="glyphicon glyphicon-filter"></span>
                 </label>
                 <label class="btn btn-default" ng-cancel-drag title="Edit Layer" ng-show="!layer.edit">
-                    <input type="button" style="display:none" ng-click="toggleEditLayer(layer)">
+                    <input type="button" style="display:none" ng-click="functions.toggleEditLayer(layer)">
+                    <span class="glyphicon glyphicon-edit"></span>
+                </label>
+                <label class="btn btn-default" ng-cancel-drag ng-class="{true: 'disabled', false: ''}[layer.error != undefined]" title="Save Layer" ng-show="layer.edit">
+                    <input type="button" style="display:none" ng-click="functions.updateLayer(layer)">
                     <span class="glyphicon glyphicon-ok"></span>
                 </label>
-                <label class="btn btn-default" ng-cancel-drag ng-class="{true: '', false: 'disabled'}[layer.valid]" title="Save Layer" ng-show="layer.edit">
-                    <input type="button" style="display:none" ng-click="updateLayer(layer)">
-                    <span class="glyphicon glyphicon-ok"></span>
-                </label>
-                <label class="btn btn-danger" ng-cancel-drag title="Delete Layer" ng-show="!layer.new && !layer.edit">
-                    <input type="button" style="display:none" ng-click="deleteLayer(layer, $index)">
-                    <span class="glyphicon glyphicon-cancel"></span>
+                <label class="btn btn-default" ng-cancel-drag title="Delete Layer">
+                    <input type="button" style="display:none" ng-click="functions.deleteLayer(layer, $index)">
+                    <span class="glyphicon glyphicon-remove"></span>
                 </label>
             </div>
 
             <div class="btn-group layer-options-col layer-options-col-wide" ng-if="bindings.hideAdvancedOptions">
                 <label class="btn btn-default" ng-cancel-drag ng-class="{true: 'active', false: ''}[layer.show]" style="width: 50%;" title="{{'Layer Visibility ' + (layer.show ? 'On' : 'Off')}}">
-                    <input type="checkbox" style="display:none" ng-model="layer.show" ng-change="toggleShowLayer(layer)">
+                    <input type="checkbox" style="display:none" ng-model="layer.show" ng-change="functions.toggleShowLayer(layer)">
                     <span class="glyphicon glyphicon-eye-open"></span>
                     Visibility
                 </label>
-                <label class="btn btn-default" ng-cancel-drag ng-class="{true: 'active', false: ''}[layer.filter]" style="width: 50%;" title="{{'Layer Filtering ' + (layer.filter ? 'On' : 'Off')}}">
-                    <input type="checkbox" style="display:none" ng-model="layer.filter" ng-change="toggleFilterLayer(layer)">
+                <label class="btn btn-default" ng-cancel-drag ng-class="{true: 'active', false: ''}[layer.filterable]" style="width: 50%;" title="{{'Layer Filtering ' + (layer.filterable ? 'On' : 'Off')}}">
+                    <input type="checkbox" style="display:none" ng-model="layer.filterable" ng-change="functions.toggleFilterLayer(layer)">
                     <span class="glyphicon glyphicon-filter"></span>
                     Filtering
                 </label>
@@ -39,7 +44,7 @@
 
             <div class="form-group layer-options-col layer-options-col-wide">
                 <label>Layer Name</label>
-                <input type="text" class="form-control" placeholder="{{layer.table.prettyName.toUpperCase()}}" style="text-transform: uppercase;" ng-model="layer.name" ng-required="false" ng-disabled="!layer.new && !layer.edit" ng-class="{true: '', false: 'ng-invalid'}[layer.valid]" ng-change="validateLayer(layer, $index)"/>
+                <input type="text" class="form-control" ng-cancel-drag placeholder="{{layer.table.prettyName.toUpperCase()}}" style="text-transform: uppercase;" ng-model="layer.name" ng-required="false" ng-disabled="!layer.new && !layer.edit" ng-class="{true: 'ng-invalid', false: ''}[layer.error != undefined]" ng-change="functions.validateLayerName(layer, $index)"/>
             </div>
         </div>
 
@@ -47,30 +52,28 @@
             <div class="layer-options-row">
                 <div class="form-group layer-options-col">
                     <label>Database</label>
-                    <select class="form-control" ng-cancel-drag ng-model="layer.database" ng-options="database.prettyName for database in layer.databases" ng-required="true" ng-disabled="layer.databases.length < 2" ng-change="updateTables(layer)"></select>
+                    <select class="form-control" ng-cancel-drag ng-model="layer.database" ng-options="database.prettyName for database in layer.databases" ng-required="true" ng-disabled="layer.databases.length < 2" ng-change="functions.updateTables(layer)"></select>
                 </div>
 
                 <div class="form-group layer-options-col">
                     <label>Table</label>
-                    <select class="form-control" ng-cancel-drag ng-model="layer.table" ng-options="table.prettyName for table in layer.tables" ng-required="true" ng-disabled="layer.tables.length < 2" ng-change="updateFields(layer)"></select>
+                    <select class="form-control" ng-cancel-drag ng-model="layer.table" ng-options="table.prettyName for table in layer.tables" ng-required="true" ng-disabled="layer.tables.length < 2" ng-change="functions.updateFields(layer)"></select>
                 </div>
 
                 <div class="form-group layer-options-col layer-options-col-wide">
                     <label>Unshared Filter</label>
                     <div class="input-group">
-                        <select class="form-control col-half" ng-cancel-drag ng-model="layer.unsharedFilterField" ng-options="field.prettyName for field in layer.fields" ng-required="false" ng-disabled="layers.fields.length < 2">
+                        <select class="form-control col-half" ng-cancel-drag ng-model="layer.unsharedFilterField" ng-options="field.prettyName for field in layer.fields" ng-required="false" ng-disabled="active.layers.fields.length < 2">
                             <option selected value="">None</option>
                         </select>
-                        <input type="text" class="form-control col-half" placeholder="{{'Filter for ' + layer.unsharedFilterField.prettyName + '...'}}" ng-cancel-drag ng-model="layer.unsharedFilterValue" ng-disabled="!active.newLayer.unsharedFilterField.columnName">
+                        <input type="text" class="form-control col-half" placeholder="{{'Filter for ' + layer.unsharedFilterField.prettyName + '...'}}" ng-cancel-drag ng-model="layer.unsharedFilterValue" ng-disabled="!layer.unsharedFilterField.columnName">
                     </div>
                 </div>
             </div>
 
-            <div ng-transclude></div>
+            <visualization-layer-options layer="layer" ng-include="'components/' + type + '/' + type + 'LayerOptions.html'"></visualization-layer-options>
 
-            <label class="layer-options-error" ng-show="!layer.valid">Please choose a unique layer name.</label>
-
-            <label class="layer-options-error" ng-show="layer.error" ng-bind="layer.error"></label>
+            <div class="layer-options-error" ng-show="layer.error" ng-bind="layer.error"></div>
         </div>
     </div>
 </div>
