NEON-1958 Major restructuring of the visualization superclass hierarchy.  The Visualization Widget now creates a div with a Visualization Superclass controller which handles most of the logic.  Inside that is a superclass implementation controller (Multiple Layer or Single Layer) which overrides logic in the superclass as needed.  The specific Visualization is defined inside the implementation controller.

--- a/client/app/main/main.less
+++ b/client/app/main/main.less
@@ -275,6 +275,11 @@ html {
 
     &.filter-container {
         min-height: 35px;
+
+        &.shrink {
+            height: 0px;
+            min-height: 0px;
+        }
     }
 
     h4 {
