--- a/client/components/aggregationTable/aggregationTableOptions.html
+++ b/client/components/aggregationTable/aggregationTableOptions.html
@@ -1,13 +1,13 @@
 <div class="form-group" ng-hide="bindings.hideAdvancedOptions">
     <label>Group Field</label>
-    <select class="form-control" ng-model="active.groupField" ng-required="true" ng-disabled="!(fields.length > 0)" ng-options="field.prettyName for field in fields" ng-change="handleChangeGroupField()">
+    <select class="form-control" ng-model="active.groupField" ng-required="true" ng-disabled="!(active.fields.length > 0)" ng-options="field.prettyName for field in active.fields" ng-change="handleChangeGroupField()">
         <option disabled selected value="">Please choose a field</option>
     </select>
 </div>
 
 <div class="form-group" ng-hide="bindings.hideAdvancedOptions">
     <label>Aggregation</label>
-    <select class="form-control" ng-model="active.aggregation" ng-required="true" ng-disabled="!(fields.length > 0)" ng-change="handleChangeAggregation()">
+    <select class="form-control" ng-model="active.aggregation" ng-required="true" ng-disabled="!(active.fields.length > 0)" ng-change="handleChangeAggregation()">
         <option value="count">Count</option>
         <option value="min">Minimum</option>
         <option value="max">Maximum</option>
@@ -16,7 +16,7 @@
 
 <div class="form-group" ng-hide="bindings.hideAdvancedOptions || active.aggregation === 'count'">
     <label>Aggregation Field</label>
-    <select class="form-control" ng-model="active.aggregationField" ng-required="true" ng-disabled="!(fields.length > 0)" ng-options="field.prettyName for field in fields" ng-change="handleChangeAggregationField()">
+    <select class="form-control" ng-model="active.aggregationField" ng-required="true" ng-disabled="!(active.fields.length > 0)" ng-options="field.prettyName for field in active.fields" ng-change="handleChangeAggregationField()">
     </select>
 </div>
 
