--- a/client/components/barChart/barChartOptions.html
+++ b/client/components/barChart/barChartOptions.html
@@ -1,6 +1,6 @@
 <div class="form-group" ng-hide="bindings.hideAdvancedOptions">
     <label>Group Field (X Axis)</label>
-    <select class="form-control" ng-model="active.groupField" ng-options="field.prettyName for field in fields" ng-required="true" ng-disabled="!(fields.length > 0)" ng-change="handleChangeAggregationField()">
+    <select class="form-control" ng-model="active.groupField" ng-options="field.prettyName for field in active.fields" ng-required="true" ng-disabled="!(active.fields.length > 0)" ng-change="handleChangeAggregationField()">
     </select>
 </div>
 
@@ -15,7 +15,7 @@
 
 <div class="form-group" ng-hide="bindings.hideAdvancedOptions || active.aggregation === 'count'">
     <label>Aggregation Field (Y Axis)</label>
-    <select class="form-control" ng-model="active.aggregationField" ng-options="field.prettyName for field in fields" ng-required="true" ng-disabled="!(fields.length > 0)" ng-change="handleChangeAggregationField()">
+    <select class="form-control" ng-model="active.aggregationField" ng-options="field.prettyName for field in active.fields" ng-required="true" ng-disabled="!(active.fields.length > 0)" ng-change="handleChangeAggregationField()">
     </select>
 </div>
 
