--- a/client/components/dataTable/dataTableOptions.html
+++ b/client/components/dataTable/dataTableOptions.html
@@ -14,7 +14,7 @@
 <div class="form-group">
     <label>Sort By Field</label>
     <div class="input-group">
-        <select class="form-control" ng-model="active.sortByField" ng-disabled="!(fields.length > 0)" ng-options="field.prettyName for field in fields" ng-change="handleChangeSortField()">
+        <select class="form-control" ng-model="active.sortByField" ng-disabled="!(active.fields.length > 0)" ng-options="field.prettyName for field in active.fields" ng-change="handleChangeSortField()">
         </select>
 
         <div class="input-group-btn">
