--- a/client/components/newsFeed/newsFeedOptions.html
+++ b/client/components/newsFeed/newsFeedOptions.html
@@ -1,27 +1,27 @@
 <div class="form-group" ng-hide="hideAdvancedOptions">
     <label>Primary Title Field</label>
-    <select class="form-control" ng-model="active.primaryTitleField" ng-required="false" ng-disabled="!(fields.length > 0)" ng-options="field.prettyName for field in fields" ng-change="handleChangePrimaryTitleField()">
+    <select class="form-control" ng-model="active.primaryTitleField" ng-required="false" ng-disabled="!(active.fields.length > 0)" ng-options="field.prettyName for field in active.fields" ng-change="handleChangePrimaryTitleField()">
         <option value="">None</option>
     </select>
 </div>
 
 <div class="form-group" ng-hide="hideAdvancedOptions">
     <label>Secondary Title Field</label>
-    <select class="form-control" ng-model="active.secondaryTitleField" ng-required="false" ng-disabled="!(fields.length > 0)" ng-options="field.prettyName for field in fields" ng-change="handleChangeSecondaryTitleField()">
+    <select class="form-control" ng-model="active.secondaryTitleField" ng-required="false" ng-disabled="!(active.fields.length > 0)" ng-options="field.prettyName for field in active.fields" ng-change="handleChangeSecondaryTitleField()">
         <option value="">None</option>
     </select>
 </div>
 
 <div class="form-group" ng-hide="hideAdvancedOptions">
     <label>Date Field</label>
-    <select class="form-control" ng-model="active.dateField" ng-required="true" ng-disabled="!(fields.length > 0)" ng-options="field.prettyName for field in fields" ng-change="handleChangeDateField()">
+    <select class="form-control" ng-model="active.dateField" ng-required="true" ng-disabled="!(active.fields.length > 0)" ng-options="field.prettyName for field in active.fields" ng-change="handleChangeDateField()">
         <option disabled selected value="">Please choose a field</option>
     </select>
 </div>
 
 <div class="form-group" ng-hide="hideAdvancedOptions">
     <label>Content Field</label>
-    <select class="form-control" ng-model="active.contentField" ng-required="true" ng-disabled="!(fields.length > 0)" ng-options="field.prettyName for field in fields" ng-change="handleChangeContentField()">
+    <select class="form-control" ng-model="active.contentField" ng-required="true" ng-disabled="!(active.fields.length > 0)" ng-options="field.prettyName for field in active.fields" ng-change="handleChangeContentField()">
         <option disabled selected value="">Please choose a field</option>
     </select>
 </div>
