--- a/client/components/scatterPlot/scatterPlotOptions.html
+++ b/client/components/scatterPlot/scatterPlotOptions.html
@@ -1,18 +1,18 @@
 <div class="form-group">
     <label>X-Axis Field</label>
-    <select class="form-control" ng-model="active.xAxisField" ng-options="field.prettyName for field in fields track by field.columnName" ng-required="true" ng-disabled="!(fields.length > 0)" ng-change="handleChangeXAxisField()">
+    <select class="form-control" ng-model="active.xAxisField" ng-options="field.prettyName for field in active.fields track by field.columnName" ng-required="true" ng-disabled="!(active.fields.length > 0)" ng-change="handleChangeXAxisField()">
     </select>
 </div>
 
 <div class="form-group">
     <label>Y-Axis Field</label>
-    <select class="form-control" ng-model="active.yAxisField" ng-options="field.prettyName for field in fields" ng-required="true" ng-disabled="!(fields.length > 0)" ng-change="handleChangeYAxisField()">
+    <select class="form-control" ng-model="active.yAxisField" ng-options="field.prettyName for field in active.fields" ng-required="true" ng-disabled="!(active.fields.length > 0)" ng-change="handleChangeYAxisField()">
     </select>
 </div>
 
 <div class="form-group">
     <label>Text Field</label>
-    <select class="form-control" ng-model="active.textField" ng-options="field.prettyName for field in fields" ng-required="true" ng-disabled="!(fields.length > 0)" ng-change="handleChangeTextField()">
+    <select class="form-control" ng-model="active.textField" ng-options="field.prettyName for field in active.fields" ng-required="true" ng-disabled="!(active.fields.length > 0)" ng-change="handleChangeTextField()">
     </select>
 </div>
 
