--- a/client/components/sunburstChart/sunburstChartOptions.html
+++ b/client/components/sunburstChart/sunburstChartOptions.html
@@ -1,6 +1,6 @@
 <div class="form-group"  ng-hide="active.arcValue === 'Record Count'">
     <label>Count Field</label>
-    <select class="form-control" ng-model="active.valueField" ng-options="field.prettyName for field in fields" ng-change="handleChangeCountField()">
+    <select class="form-control" ng-model="active.valueField" ng-options="field.prettyName for field in active.fields" ng-change="handleChangeCountField()">
         <option value="">Select a Field</option>
     </select>
 </div>
@@ -8,7 +8,7 @@
 <div class="form-group">
     <label>Add a Ring</label>
     <div class="input-group">
-        <select class="form-control" ng-model="active.addField" ng-disabled="!(fields.length > 0)" ng-options="field.prettyName for field in fields">
+        <select class="form-control" ng-model="active.addField" ng-disabled="!(active.fields.length > 0)" ng-options="field.prettyName for field in active.fields">
             <option value="">Add a Ring</option>
         </select>
         <div class="input-group-btn">
