--- a/client/components/textCloud/textCloudOptions.html
+++ b/client/components/textCloud/textCloudOptions.html
@@ -1,6 +1,6 @@
 <div class="form-group" ng-hide="bindings.hideAdvancedOptions">
     <label>Data Field</label>
-    <select class="form-control" ng-model="active.dataField" ng-options="field.prettyName for field in fields" ng-required="true" ng-disabled="(fields.length == 0)" ng-change="handleChangeDataField()">
+    <select class="form-control" ng-model="active.dataField" ng-options="field.prettyName for field in active.fields" ng-required="true" ng-disabled="(active.fields.length == 0)" ng-change="handleChangeDataField()">
     </select>
 </div>
 
